<resources>
    <string name="app_name">ModernLogin</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="already_nhave_an_naccount">Already \nhave an \nAccount?</string>
    <string name="todo1">TODO1</string>
    <string name="todo2">TODO2</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="use_other_methods">Use other Methods</string>
    <string name="todo4">TODO4</string>
    <string name="todo5">TODO5</string>
    <string name="name">Name</string>
    <string name="here_s_nyour_first_nstep_with_nus">Here’s\nyour first\nstep with \nus!</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="mobile_number">Mobile number</string>
    <string name="helper_text">Name is required. Dont live it blank</string>
    <string name="appbartitlefragment">AppBartitlefragment</string>
    <string name="titlebar">Title</string>
    <string name="username">Username</string>
    <string name="memo_quote">Memo quote</string>
    <string name="wallpaper">WALLPAPER</string>
    <string name="explore">Explore</string>
    <string name="notification">Notifications</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="speech_now">Speech Now</string>
    <string name="post">Post</string>
    <string name="see_your_about_info">See your about info</string>
    <string name="more">more</string>
    <string name="profile_picture">Profile picture</string>
    <string name="edit">Edit</string>
    <string name="cover_photo">Cover photo</string>
    <string name="quotes">Quotes</string>
    <string name="you_can_enter_your_meaningful_quotations_here">You can enter your meaningful quotations here</string>
    <string name="details">Details</string>
    <string name="your_living_place">Your living place</string>
    <string name="day_joined">Day Joined</string>
    <string name="work_place">Work place</string>
    <string name="education">Education</string>
    <string name="hometown">Hometown</string>
    <string name="relationship">Relationship</string>
    <string name="hobbies">Hobbies</string>
    <string name="links">Links</string>
    <string name="enter_your_user_name">Enter your user name</string>
    <string name="your_alternative_name">Your alternative name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="update_profile">Update Profile</string>
    <string name="avatar">avatar</string>

    <!--for facebook login-->

    <!--facebook login ends-->

    <!--error messages-->

</resources>
